feat(audit): audit between timestamps
